sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:14: error: not found: value plusGrand
        if(!plusGrand(i-1,i)){
            ^